@@ -96,7 +96,9 @@ void MemoryCache::writeShadersToDisk(const char* path, GrBackendApi api) {
         // Even with the SPIR-V switches, it seems like we must use .spv, or malisc tries to
         // run glslang on the input.
         const char* ext = GrBackendApi::kOpenGL == api ? "frag" : "spv";
-        GrPersistentCacheUtils::UnpackCachedShaders(data, shaders,
+        SkReader32 reader(data->data(), data->size());
+        reader.readU32(); // Shader type tag
+        GrPersistentCacheUtils::UnpackCachedShaders(&reader, shaders,
                                                     inputsIgnored, kGrShaderTypeCount);
 
         SkString filename = SkStringPrintf("%s/%s.%s", path, md5.c_str(), ext);
